yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 3  # Number of pods to run
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: vin1989/flask-alb-demo  # Update with your Docker image location if pushed to a repository
        ports:
        - containerPort: 5000
