yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  alb-flask-app-service
  labels:
    app: flask-app
spec:
  type: NodePort  # Default is classic LB
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80  # External port for the LoadBalancer
      targetPort: 5000  # The port on the Flask app container
